[package]
name = "darq-eval-context"
version = "0.1.0"
edition = "2021"
description = "Reusable evaluation context library for DARQ Labs business decisions"
license = "MIT"
repository = "https://github.com/Quigles1337/DARQ-Eval"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
blake3 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
